# rec_bole_experiment

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
src/: main.py  r1.py
src/recbole_experiment/: __init__.py
src/recbole_experiment/config/: __init__.py  manager.py
src/recbole_experiment/data/: __init__.py  dataset.py  generator.py
src/recbole_experiment/experiments/: __init__.py  click_prediction.py
src/recbole_experiment/models/: __init__.py  registry.py
src/recbole_experiment/training/: __init__.py  metrics.py  trainer.py
src/recbole_experiment/utils/: __init__.py  feature_extractor.py  model_saver.py  torch_compat.py
test/: test_click_prediction_experiment.py  test_config_manager.py  test_data_generator.py  test_dataset.py  test_feature_extractor.py  test_metrics_manager.py  test_model_registry.py  test_model_saver.py  test_model_trainer.py  test_torch_patch.py
